--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js" defer></script>
-    <title>Aula 03</title>
+    <title>Aula 04</title>
 </head>
 
 <body>
@@ -28,10 +28,16 @@
             <div class="numeros" id="container-numeros-impares"></div>
         </div>
         <div class="item">
-            <button id="botao-mostrar-numeros-multiplos-tres">Multiplos de 3</button>
-            <div class="numeros" id="container-numeros-multiplos-tres"></div>
-            <button id="botao-mostrar-numeros-multiplos-quatro">Multiplos de 4</button>
-            <div class="numeros" id="container-numeros-multiplos-quatro"></div>
+            <button id="botao-mostrar-numeros-multiplos-tres-e-quatro">Múltiplos de 3 e 4</button>
+            <div class="numeros" id="container-numeros-multiplos-tres-e-quatro"></div>
+        </div>
+        <div class="item">
+            <button id="botao-mostrar-numeros-multiplos-tres-ou-quatro">Múltiplos de 3 ou 4</button>
+            <div class="numeros" id="container-numeros-multiplos-tres-ou-quatro"></div>
+        </div>
+        <div class="item">
+            <button id="botao-mostrar-triplo">Triplo</button>
+            <div class="numeros" id="container-mostrar-triplo"></div>
         </div>
 </body>
 
